--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,22 @@
 pipeline {
-    agent any
-     stages{
-      stage('Hello'){
-       steps {
-         echo "Hello World"
-       }
+  agent any
+  stages {
+    stage('clean'){
+      steps {
+        sh 'mvn clean'
+      }
     }
-    
+  
+    stage('compile'){
+      steps {
+        sh 'mvn compile'
+      }
     }
-
+    stage('install'){
+      steps {
+        sh 'mvn install'
+        sh 'mvn package'
+      }
+    }
+  }
 }
